// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders correctly when type is Address 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  style={
    {
      "flexDirection": "row",
    }
  }
  transparent={true}
  visible={true}
>
  <RCTScrollView
    contentContainerStyle={
      {
        "height": "auto",
        "marginTop": "38%",
        "paddingBottom": "40%",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#101427",
            "height": "100%",
            "paddingHorizontal": 10,
            "paddingVertical": 17,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
              }
            }
          >
            Endereço
          </Text>
          <View
            accessibilityLabel="Close Modal"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#D9D9D9",
                "borderRadius": 100,
                "height": 36,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 5,
                "position": "absolute",
                "right": 0,
                "width": 36,
              }
            }
          >
            <svg
              height={20}
              width={20}
            />
          </View>
        </View>
        <View
          style={
            {
              "gap": 20,
              "height": "100%",
              "marginTop": 35,
              "paddingHorizontal": 8,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "height": 48,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 18,
                    "paddingVertical": 9,
                  },
                  {
                    "borderBottomColor": undefined,
                    "borderBottomEndRadius": undefined,
                    "borderBottomStartRadius": undefined,
                    "borderBottomWidth": 0,
                    "borderRadius": 7,
                    "borderTopEndRadius": undefined,
                    "borderTopStartRadius": undefined,
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                  }
                }
              >
                Endereço
              </Text>
              <Text
                style={
                  {
                    "color": "#DF7800",
                    "fontSize": 15,
                  }
                }
              >
                0x123...
              </Text>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "height": 48,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 18,
                    "paddingVertical": 9,
                  },
                  {
                    "borderBottomColor": undefined,
                    "borderBottomEndRadius": 0,
                    "borderBottomStartRadius": 0,
                    "borderBottomWidth": 0,
                    "borderRadius": 7,
                    "borderTopEndRadius": undefined,
                    "borderTopStartRadius": undefined,
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                  }
                }
              >
                Total Recebido
              </Text>
              <Text
                style={
                  {
                    "color": "#DF7800",
                    "fontSize": 15,
                  }
                }
              >
                0 BTC
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "height": 48,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 18,
                    "paddingVertical": 9,
                  },
                  {
                    "borderBottomColor": undefined,
                    "borderBottomEndRadius": 0,
                    "borderBottomStartRadius": 0,
                    "borderBottomWidth": 0,
                    "borderRadius": 7,
                    "borderTopEndRadius": 0,
                    "borderTopStartRadius": 0,
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                  }
                }
              >
                Total Enviado
              </Text>
              <Text
                style={
                  {
                    "color": "#DF7800",
                    "fontSize": 15,
                  }
                }
              >
                0 BTC
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "height": 48,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 18,
                    "paddingVertical": 9,
                  },
                  {
                    "borderBottomColor": undefined,
                    "borderBottomEndRadius": undefined,
                    "borderBottomStartRadius": undefined,
                    "borderBottomWidth": 0,
                    "borderRadius": 7,
                    "borderTopEndRadius": 0,
                    "borderTopStartRadius": 0,
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                  }
                }
              >
                Saldo
              </Text>
              <Text
                style={
                  {
                    "color": "#DF7800",
                    "fontSize": 15,
                  }
                }
              >
                0 BTC
              </Text>
            </View>
          </View>
          <View>
            <View
              style={
                {
                  "backgroundColor": "#101427",
                  "gap": 16,
                  "height": "100%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                    "fontWeight": "600",
                  }
                }
              >
                Entradas e Saídas
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "maxWidth": "100%",
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#DF7800",
                          "fontSize": 16,
                        }
                      }
                    >
                       ...
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#FFF",
                          "fontSize": 13,
                          "textAlign": "right",
                        }
                      }
                    >
                      0
                       BTC
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#D9D9D9",
                      "fontSize": 28,
                      "fontWeight": "800",
                    }
                  }
                >
                  &gt;
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#DF7800",
                          "fontSize": 16,
                        }
                      }
                    >
                       ...
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#FFF",
                          "fontSize": 13,
                          "textAlign": "right",
                        }
                      }
                    >
                      0
                       BTC
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#101427",
                  "gap": 16,
                  "height": "100%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                    "fontWeight": "600",
                  }
                }
              >
                Entradas e Saídas
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "maxWidth": "100%",
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#DF7800",
                          "fontSize": 16,
                        }
                      }
                    >
                       ...
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#FFF",
                          "fontSize": 13,
                          "textAlign": "right",
                        }
                      }
                    >
                      0
                       BTC
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#D9D9D9",
                      "fontSize": 28,
                      "fontWeight": "800",
                    }
                  }
                >
                  &gt;
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#DF7800",
                          "fontSize": 16,
                        }
                      }
                    >
                       ...
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#FFF",
                          "fontSize": 13,
                          "textAlign": "right",
                        }
                      }
                    >
                      0
                       BTC
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`Modal renders correctly when type is Block 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <RCTScrollView
    contentContainerStyle={
      {
        "backgroundColor": "#101427",
        "height": "100%",
        "marginTop": "38%",
        "paddingBottom": "40%",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#101427",
            "height": "100%",
            "paddingHorizontal": 10,
            "paddingVertical": 17,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
              }
            }
          >
            Bloco
          </Text>
          <View
            accessibilityLabel="Close Modal"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#D9D9D9",
                "borderRadius": 100,
                "height": 36,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 5,
                "position": "absolute",
                "right": 0,
                "width": 36,
              }
            }
          >
            <svg
              height={20}
              width={20}
            />
          </View>
        </View>
        <View
          style={
            {
              "gap": 20,
              "height": "100%",
              "marginTop": 35,
              "paddingHorizontal": 8,
            }
          }
        >
          <ActivityIndicator
            color="#FFF"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`Modal renders correctly when type is Transaction 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  style={
    {
      "flexDirection": "row",
    }
  }
  transparent={true}
  visible={true}
>
  <RCTScrollView
    contentContainerStyle={
      {
        "backgroundColor": "#101427",
        "height": "auto",
        "marginTop": "38%",
        "paddingBottom": "40%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#101427",
            "paddingHorizontal": 10,
            "paddingVertical": 17,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
              }
            }
          >
            Transação
          </Text>
          <View
            accessibilityLabel="Close Modal"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#D9D9D9",
                "borderRadius": 100,
                "height": 36,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 5,
                "position": "absolute",
                "right": 0,
                "width": 36,
              }
            }
          >
            <svg
              height={20}
              width={20}
            />
          </View>
        </View>
        <View
          style={
            {
              "gap": 16,
              "marginTop": 35,
              "paddingHorizontal": 8,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "height": 48,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 18,
                    "paddingVertical": 9,
                  },
                  {
                    "borderBottomColor": undefined,
                    "borderBottomEndRadius": undefined,
                    "borderBottomStartRadius": undefined,
                    "borderBottomWidth": 0,
                    "borderRadius": 7,
                    "borderTopEndRadius": undefined,
                    "borderTopStartRadius": undefined,
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                  }
                }
              >
                Hash
              </Text>
              <Text
                style={
                  {
                    "color": "#DF7800",
                    "fontSize": 15,
                  }
                }
              >
                #ABC12...
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "gap": 16,
              }
            }
          >
            <View
              style={
                {
                  "gap": 16,
                }
              }
            >
              <View
                style={
                  {
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1d2133",
                        "height": 48,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 18,
                        "paddingVertical": 9,
                      },
                      {
                        "borderBottomColor": undefined,
                        "borderBottomEndRadius": undefined,
                        "borderBottomStartRadius": undefined,
                        "borderBottomWidth": 0,
                        "borderRadius": 7,
                        "borderTopEndRadius": undefined,
                        "borderTopStartRadius": undefined,
                        "flexDirection": "row",
                        "width": "auto",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 15,
                      }
                    }
                  >
                    Não Confirmada
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#DF7800",
                        "fontSize": 15,
                      }
                    }
                  />
                </View>
              </View>
              <View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1d2133",
                        "height": 48,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 18,
                        "paddingVertical": 9,
                      },
                      {
                        "borderBottomColor": "#D9D9D9",
                        "borderBottomEndRadius": 0,
                        "borderBottomStartRadius": 0,
                        "borderBottomWidth": 0.1,
                        "borderRadius": 7,
                        "borderTopEndRadius": undefined,
                        "borderTopStartRadius": undefined,
                        "flexDirection": "row",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 15,
                      }
                    }
                  >
                    Data/Hora
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#DF7800",
                        "fontSize": 15,
                      }
                    }
                  >
                    Aguardando Confirmação
                  </Text>
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1d2133",
                        "height": 48,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 18,
                        "paddingVertical": 9,
                      },
                      {
                        "borderBottomColor": "#D9D9D9",
                        "borderBottomEndRadius": 0,
                        "borderBottomStartRadius": 0,
                        "borderBottomWidth": 0.1,
                        "borderRadius": 7,
                        "borderTopEndRadius": 0,
                        "borderTopStartRadius": 0,
                        "flexDirection": "row",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 15,
                      }
                    }
                  >
                    Tamanho
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#DF7800",
                        "fontSize": 15,
                      }
                    }
                  >
                    0 B
                  </Text>
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1d2133",
                        "height": 48,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 18,
                        "paddingVertical": 9,
                      },
                      {
                        "borderBottomColor": undefined,
                        "borderBottomEndRadius": undefined,
                        "borderBottomStartRadius": undefined,
                        "borderBottomWidth": 0,
                        "borderRadius": 7,
                        "borderTopEndRadius": 0,
                        "borderTopStartRadius": 0,
                        "flexDirection": "row",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 15,
                      }
                    }
                  >
                    Taxa
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#DF7800",
                        "fontSize": 15,
                      }
                    }
                  >
                    0 BTC
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#101427",
                  "gap": 16,
                  "height": "100%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFF",
                    "fontSize": 15,
                    "fontWeight": "600",
                  }
                }
              >
                Entradas e Saídas
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1d2133",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "maxWidth": "100%",
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#DF7800",
                          "fontSize": 16,
                        }
                      }
                    >
                       ...
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#FFF",
                          "fontSize": 13,
                          "textAlign": "right",
                        }
                      }
                    >
                      0
                       BTC
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#D9D9D9",
                      "fontSize": 28,
                      "fontWeight": "800",
                    }
                  }
                >
                  &gt;
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#DF7800",
                          "fontSize": 16,
                        }
                      }
                    >
                       ...
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#FFF",
                          "fontSize": 13,
                          "textAlign": "right",
                        }
                      }
                    >
                      0
                       BTC
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;
